# tz-osemosys

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DockerfileHiGHS  README.md  build_highs.sh  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci-docker-highs.yaml  ci-test.yaml  pypi_publish.yml  test_pypi_publish.yml  trigger-tz-solve-build.yml  tz-solve-osemosys-build-webhook.yml
config/config_PH/: main.yaml  technologies.yaml
docs/: ALL_DOCUMENTATION.md  commodity.md  impact.md  index.md  model.md  operating_mode.md  region.md  storage.md  technology.md  time_definition.md  trade.md  tutorials.md
examples/: README.md
examples/CAISO-ERCOT-IC/: main.yaml  technologies.yaml
examples/from_minspec_yaml_files/: technologies.yaml
examples/otoole_csvs/model_one/: FixedCost.csv  SpecifiedDemandProfile.csv  YEAR.csv  YearSplit.csv
examples/otoole_csvs/model_three_edited/: OutputActivityRatio.csv
examples/otoole_csvs/otoole-full-electricity/: CapacityFactor.csv  CapitalCost.csv  Conversionlh.csv  EmissionsPenalty.csv  FixedCost.csv  InputActivityRatio.csv  VariableCost.csv
examples/otoole_csvs/otoole-full-electricity-complete/: AccumulatedAnnualDemand.csv  CapacityFactor.csv  EmissionsPenalty.csv  OutputActivityRatio.csv  RETagFuel.csv  ReserveMarginTagFuel.csv  ReserveMarginTagTechnology.csv  ResidualCapacity.csv  STORAGE.csv  StorageLevelStart.csv  StorageMaxChargeRate.csv  TechnologyFromStorage.csv  TechnologyToStorage.csv  TotalAnnualMaxCapacity.csv  TotalAnnualMinCapacityInvestment.csv  TotalTechnologyModelPeriodActivityLowerLimit.csv  TradeRoute.csv  VariableCost.csv
examples/otoole_csvs/otoole-simple-hydro/: TECHNOLOGY.csv
examples/otoole_csvs/simple_model_3_technologies/: CapitalCost.csv  SpecifiedAnnualDemand.csv
examples/otoole_results/otoole-full-electricity/: AnnualVariableOperatingCost.csv  CapitalInvestment.csv  Demand.csv  NewCapacity.csv  ProductionByTechnology.csv  ProductionByTechnologyAnnual.csv  RateOfProductionByTechnology.csv  RateOfUseByTechnology.csv  SalvageValue.csv  TotalDiscountedCost.csv  TotalTechnologyAnnualActivity.csv  TotalTechnologyModelPeriodActivity.csv  UseByTechnology.csv
examples/otoole_results/otoole-simple-hydro/: AnnualFixedOperatingCost.csv  CapitalInvestment.csv  Demand.csv  DiscountedSalvageValue.csv  RateOfUseByTechnology.csv  TotalCapacityAnnual.csv  TotalTechnologyAnnualActivity.csv  UseByTechnology.csv
examples/quickstart/: main.yaml
examples/two-region-model/: README.md  capacities.yaml  capacity_factors.yaml  commodities.yaml  costs.yaml  main.yaml  regions.yaml  targets.yaml  technologies.yaml  time_definitions.yaml
examples/utopia/: main.yaml
feo/osemosys/: __init__.py  constraints.py  defaults.py  exceptions.py  load_model.py  logger.py  simpleeval.py  utils.py  variables.py
feo/osemosys/io/: load_model.py
feo/osemosys/model/: adapter.py  full_linopy_run.py  model.py  objective.py
feo/osemosys/schemas/: __init__.py  base.py  commodity.py  default_values.py  emission.py  fuel.py  impact.py  model.py  other_parameters.py  region.py  storage.py  technology.py  time_definition.py
feo/osemosys/utils/: __init__.py  cfg_parser.py  utils.py
notebooks/: osemosys_linopy.ipynb  utopia.ipynb
tests/: conftest.py  test_otoole_roundtrip.py  test_otoole_timedef.py
tests/data/: model_one.yaml
tests/data/model_one/: CapacityToActivityUnit.csv  InputActivityRatio.csv  OperationalLife.csv  OutputActivityRatio.csv
tests/data/model_three_edited/: DepreciationMethod.csv  SEASON.csv  TotalAnnualMaxCapacity.csv
tests/fixtures/: misc.py  paths.py
tests/otoole_compare/model_one/: YearSplit.csv
tests/otoole_compare/model_three_edited/: CapacityFactor.csv  CapacityToActivityUnit.csv  DaySplit.csv  EmissionActivityRatio.csv  InputActivityRatio.csv  OperationalLife.csv  OutputActivityRatio.csv  TotalAnnualMaxCapacity.csv  (+2 more)
tests/test_compatability/: _test_otoole_roundtrip.py  _test_otoole_timedef.py  _test_otoole_to_xr.py  test_otoole_commodity.py  test_otoole_impact.py  test_otoole_region.py  test_otoole_roundtrip.py  test_otoole_runspec.py  test_otoole_storage.py  test_otoole_technology.py  test_otoole_timedef.py  test_otoole_trade.py  test_to_xr_ds.py
tests/test_composition/: test_compose_base.py  test_compose_runspec.py
tests/test_construction/: test_base.py  test_commodity.py  test_data.py  test_impact.py  test_load_from_yaml.py  test_model.py  test_region.py  test_runspec.py  test_storage.py  test_technology.py  test_timedefinition.py  test_trade.py
tests/test_integration/: test_linopy_model.py
tests/test_solve/: test_3_node_trade.py  test_growth_rates.py  test_min_capacity_factors.py  test_production_targets.py  test_region_group.py  test_salvage.py  test_solve.py  test_to_xr_ds.py
tests/tests_integration/: test_linopy_model.py
tz/osemosys/: __init__.py  defaults.py  exceptions.py  logger.py
(+326 files in other folders)
