[project]
name = "feo-osemosys"  # Required
version = "0.0.1"  # Required
description = "An OSeMOSYS implementation for the Future Energy Outlook by TransitionZero"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["energy", "milp", "climate"]  # Optional
authors = [
  {name = "Abhishek Shivakumar", email = "abhishek0208@gmail.com" },
  {name = "Ed Gill", email = "edwardxtg@gmail.com" },
  {name = "Lucas Kruitwagen", email = "lucas.kruitwagen@gmail.com" },
]

#maintainers = [
#  {name = "A. Great Maintainer", email = "maintainer@example.com" } # Optional
#]

# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Researchers",
  "Topic :: Energy Systems :: Modelling Framework",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pydantic>2",

]

[project.optional-dependencies] # Optional
dev = [
  "pre-commit",
  "black",
  "pytest",
  "pytest-order",
  "pytest-asyncio",
  "mypy",
  "tox",
  "coverage",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/transitionzero/feo-osemosys"
"Bug Reports" = "https://github.com/transitionzero/feo-osemosys/issues"
"Funding" = "https://transitionzero.org"
"Source" = "https://github.com/transitionzero/feo-osemosys"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[tool.setuptools.packages]
find = {}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
