[project]
name = "tz-osemosys"  # Required
dynamic = ["version"]
description = "An OSeMOSYS implementation for the Future Energy Outlook by TransitionZero"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
keywords = ["energy", "milp", "climate"]  # Optional
authors = [
  {name = "Lucas Kruitwagen", email = "lucas.kruitwagen@gmail.com" },
  {name = "Ed Gill", email = "edwardxtg@gmail.com" },
  {name = "Abhishek Shivakumar", email = "abhishek0208@gmail.com" },
]


classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "pydantic>2",
  "pydantic-settings",
  "xarray",
  "orjson",
  "linopy",

]


#maintainers = [
#  {name = "A. Great Maintainer", email = "maintainer@example.com" } # Optional
#]

# For a list of valid classifiers, see https://pypi.org/classifiers/


[project.optional-dependencies] # Optional
dev = [
  "pre-commit",
  "black",
  "pytest",
  "pytest-order",
  "pytest-cov",
  "pytest-asyncio",
  "mypy",
  "tox",
  "coverage",
  "highspy",
]



[project.urls]  # Optional
"Homepage" = "https://github.com/transitionzero/tz-osemosys"
"Bug Reports" = "https://github.com/transitionzero/tz-osemosys/issues"
"Funding" = "https://transitionzero.org"
"Source" = "https://github.com/transitionzero/tz-osemosys"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
# [project.scripts]  # Optional
# sample = "sample:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[tool.setuptools.packages]
find = {}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0","setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
